--- a/public/nex/assets/css/style.css
+++ b/public/nex/assets/css/style.css
@@ -1791,6 +1791,9 @@ img.left {
 .icon-img-120 {
   width: 120px;
 }
+.icon-img-200 {
+  width: 200px;
+}
 
 /*-------------------------------------------------------
            Z-index
@@ -5802,9 +5805,6 @@ footer.clean-footer.crev:after {
 .main-header {
   padding: 120px 0 0;
   background-size: cover;
-  /* background-image: url("/nex/assets/imgs/header/bg1.jpg");
-  
-  */
   background-color: var(--primary-color);
 }
 
@@ -10718,6 +10718,69 @@ Keyframes Area Style
 }
 
 .main-banner-area .over-shape img:nth-child(3) {
+  top: 200px;
+  right: 200px;
+  -webkit-animation: animationFramesOne 25s infinite linear;
+  animation: animationFramesOne 25s infinite linear;
+}
+
+.portfolio-hero-section {
+  background-color: var(--primary-color);
+}
+
+.portfolio-hero-section {
+  overflow: hidden;
+  z-index: 1;
+}
+
+.portfolio-hero-section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../imgs/animate/animate4.png);
+  -webkit-animation: focus-one 1s linear 1s infinite;
+  animation: focus-one 1s linear 1s infinite;
+  z-index: -1;
+}
+.portfolio-hero-section::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../imgs/patterns/graph.png);
+  -webkit-animation: movebounceShort 5s linear infinite;
+  animation: movebounceShort 5s linear infinite;
+  z-index: -1;
+}
+
+.portfolio-hero-section .over-shape img {
+  position: absolute;
+  z-index: -1;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
+
+.portfolio-hero-section.over-shape img:nth-child(1) {
+  top: 300px;
+  left: 40px;
+  -webkit-animation: animationFramesOne 25s infinite linear;
+  animation: animationFramesOne 25s infinite linear;
+}
+
+.portfolio-hero-section .over-shape img:nth-child(2) {
+  top: 200px;
+  left: 800px;
+  -webkit-animation: animationFramesOne 40s infinite linear;
+  animation: animationFramesOne 40s infinite linear;
+}
+
+.portfolio-hero-section .over-shape img:nth-child(3) {
   top: 200px;
   right: 200px;
   -webkit-animation: animationFramesOne 25s infinite linear;
